source/src/page/ContentsBanner.scss
.contents-banner {
  text-align: left;

  a {
    text-decoration: none;

    .subject {
      font-weight: bold;
      font-size: 22px;
    }

    .description {
      font-size: 16px;
      margin-top: 8px;
    }

    .date {
      font-size: 15px;
      margin-top: 5px;
      text-align: right;
    }

    .button {
      position: relative;
      padding: 0.8em 1.5em;
      border: none;
      background-color: transparent;
      cursor: pointer;
      outline: none;
      font-size: 18px;
      margin: 1em 0.8em;
    }
    .button.type2 {
      color: #515151;
    }
    .button.type2:hover {
      color: #E93B35;
    }
    .button.type2.type2:after, .button.type2.type2:before {
      content: "";
      display: block;
      position: absolute;
      top: 100%;
      left: 0;
      width: 100%;
      height: 2px;
      background-color: #515151;
      transition: all 0.3s ease;
      transform: scale(0.85);
    }
    .button.type2.type2:hover:before {
      top: 0;
      transform: scale(1);
      background-color: #E93B35;
    }
    .button.type2.type2:hover:after {
      transform: scale(1);
      background-color: #E93B35;
    }
  }
}

